BusOne/src/objects/BOT_Specialty_Provider__c.object
<CustomObject>
    <description>Used to store the specialty provider details</description>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the related account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Specialty Providers</relationshipLabel>
        <relationshipName>Specialty_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_City__c</fullName>
        <description>Used to store the city name.</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_PBM__c</fullName>
        <description>Used to store the PBM Name</description>
        <label>PBM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Phone__c</fullName>
        <description>Used to store the phone number.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BOT_SPP_Type__c</fullName>
        <description>Used to store the specialty type data.</description>
        <label>SPP Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PBM</fullName>
                </value>
                <value>
                    <fullName>Stand Alone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Specialty_ID__c</fullName>
        <description>Used to store the specialty ID</description>
        <label>Specialty ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_State__c</fullName>
        <description>Used to store the state name.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_website__c</fullName>
        <description>Used to store the name of the website.</description>
        <label>website</label>
        <type>Url</type>
    </fields>
    <label>Specialty Provider</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Specialty Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specialty Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>